# soda-curation

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpu  README.md  config.benchmark.yaml  config.dev.yaml  config.qc.yaml  config.sample.yaml  config.test.yaml  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.prodyml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  eval.ipynb  format_and_lint.sh  pyproject.toml  requirements.txt  results.ipynb  run_benchmark.py  run_benchmark.sh  run_soda_curation.sh  run_soda_curation_cpu.sh  run_tests.sh  sample_config.yaml  start.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
data/ground_truth/: EMBOJ-2023-114195.json  EMBOJ-2023-114687.json  EMBOJ-2023-115257.json  EMBOJ-2023-115537.json  EMBOJ-2024-116743.json  EMBOJ-2024-117116.json  EMBOR-2023-58706-T.json  EMBOR-2024-58727V1.json  EMBOR-2024-59101V1-T.json  EMM-2023-18636.json  EMM-2023-19044.json  MSB-2023-12087.json
docs/: pipeline.md
mockups/: data4rev.bmpr
mockups/balsamiq/: data4rev-figure-view.bmpr  data4rev-paper-view.bmpr  data4rev.bmpr
mockups/streamlit/: Dockerfile  docker-compose.yaml  requirements.txt
mockups/streamlit/src/: app.py  validation_view.py  views.py
scripts/: run_output_validation_tests.py  validate_pipeline_output_structure.py
src/: app.py  assistants.py  zip_processor.py
src/soda_curation/: _main_utils.py  agentic_tools.py  config.py  data_storage.py  debug_visualizer.py  eval.py  fuzzy_matching.py  logging_config.py  main.py  qc_analysis.py  zip_processor.py
src/soda_curation/ai_modules/: anthropic_module.py  general.py  openai_module.py
src/soda_curation/data_availability/: data_availability_base.py  data_availability_openai.py  data_availability_prompts.py
src/soda_curation/pipeline/: ai_observability.py  anthropic_utils.py  cost_tracking.py  openai_utils.py  prompt_handler.py
src/soda_curation/pipeline/assign_panel_source/: assign_panel_source.py  assign_panel_source_anthropic.py  assign_panel_source_base.py  assign_panel_source_openai.py  assign_panel_source_prompts.py
src/soda_curation/pipeline/data_availability/: data_availability_anthropic.py  data_availability_base.py  data_availability_openai.py  identifiers.json  identifiers.txt
src/soda_curation/pipeline/extract_captions/: extract_captions_anthropic.py  extract_captions_base.py  extract_captions_claude.py  extract_captions_openai.py  extract_captions_prompts.py  extract_captions_regex.py
src/soda_curation/pipeline/extract_sections/: __init__.py  extract_sections_anthropic.py  extract_sections_base.py  extract_sections_openai.py  extract_sections_smolagents.py
src/soda_curation/pipeline/manuscript_structure/: exceptions.py  manuscript_structure.py  manuscript_xml_parser.py
src/soda_curation/qc/: __init__.py  analyzer_factory.py  base_analyzers.py  data_models.py  data_types.py  main.py  model_api.py  prompt_registry.py  qc_pipeline.py
src/soda_curation/scripts/: __init__.py  develop_qc.py  test_qc_pipeline.py
tests/: docker_test_checklist.md  test_anthropic_module.py  test_app.py  test_assistants.py  test_config.py  test_environment.py  test_general.py  test_main.py  test_manuscript_structure.py  test_openai_module.py  test_zip_processor.py
tests/test_pipeline/: benchmark.py  metrics.py  run_benchmark.py  test_match_caption_panel.py  test_object_detection.py
tests/test_pipeline/benchmark/: base_runner.py  config.py  test_assign_panel.py  test_assign_panel_source.py  test_extract_data_availability.py  test_extract_individual_captions.py  test_extract_sections.py
tests/test_pipeline/test_extract_captions/: test_eval.py  test_extract_captions_anthropic.py  test_extract_captions_base.py  test_extract_captions_openai.py
tests/test_pipeline/test_manuscript_structure/: test_manuscript_structure.py  test_manuscript_xml_parser.py
tests/test_pipeline/test_zip_structure/: test_base.py  test_zip_structure_anthropic.py  test_zip_structure_base.py  test_zip_structure_openai.py
tests/test_suite/: test_agentic_tools.py  test_assign_panel_source.py  test_data_availability.py  test_extract_captions.py  test_extract_sections.py  test_individual_analyzers.py  test_main.py  test_main_utils.py  test_manuscript_structure.py  test_match_caption_panel.py  test_model_api.py  test_object_detection.py  test_object_detection_fix.py  test_object_detection_integration.py  test_openai_chunking.py  test_openai_utils.py  test_output_format_validation.py  test_pipeline_output_structure_validation.py  test_pipeline_output_validation.py  test_pipeline_structure_validation_fast.py  test_plot_axis_units.py  test_prompt_registry.py  test_qc_analyzer_factory.py  test_qc_base_analyzers.py  test_qc_end_to_end.py  test_qc_integration.py  test_qc_main.py  test_qc_panel_label_validation.py  test_qc_pipeline.py  test_qc_providers.py  test_qc_runner.py  test_real_pipeline_structure_validation.py  test_stats_significance_level.py  test_stats_test.py  test_zip_validation.py
tests/test_suite/test_data/: EMBOJ-DUMMY-ZIP.xml
tests/test_suite/test_qc_pipe/: test_plot_axis_units.py  test_qc_pipeline.py  test_replicates_defined.py  test_stats_significance_level.py  test_stats_test.py
(+30 files in other folders)
