[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soda-curation"
version = "2.2.0"
description = "A professional Python package for data curation with AI capabilities"
authors = ["Dr. Jorge Abreu Vicente <jorge.abreu@embo.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "soda_curation", from = "src"}]
repository = "https://github.com/source-data/soda-curation"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"  # Exclude Python 3.9.7openai = "^1.43.0"
pyyaml = "^6.0.2"
python-docx = "^0.8.11"
PyPDF2 = "^3.0.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0.74"
Pillow = "^11.0.0"
dill = "^0.3.8"
fuzzywuzzy = "^0.18.0"
anthropic = "0.40.0"
rouge-score = "^0.1.2"
backoff = "^2.2.1"
PyYAML = "^6.0.0"
beautifulsoup4 = "^4.12.0"
pypandoc_binary = "^1.14.0"
ipywidgets = "^8.1.5"
pandas = "^2.0.3"
httpx = "0.28.1"
python-dotenv = "^1.0.0"
gitpython = "^3.1.44"
openpyxl = "^3.1.5"
rapidfuzz = "^3.9.7"
pdf2image = "^1.16.3"
openai-agents = "0.0.9"
Wand = "0.6.13"
soda-mmqc = {git = "https://github.com/source-data/soda-mmQC.git", rev = "master"}
datamodel-code-generator = "^0.31.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-html = "^4.1.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
tabulate = "^0.9.0"
deepeval = "^1.5.8"
plotly = "^5.24.1"
pytest-harvest = "^1.10.5"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
papermill = "^2.6.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
soda-curation = "soda_curation.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true