[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "soda-curation"
version = "3.1.2"
description = "A professional Python package for data curation with AI capabilities"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Dr. Jorge Abreu Vicente", email = "jorge.abreu@embo.org"},
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/source-data/soda-curation"

[project.scripts]
soda-curation = "soda_curation.main:main"

[tool.poetry]
packages = [{include = "soda_curation", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
openai = "^1.43.0"
pyyaml = "^6.0.2"
python-docx = "^0.8.11"
PyPDF2 = "^3.0.0"
numpy = "^1.24.0"
opencv-python = "^4.8.0.74"
Pillow = "^11.0.0"
anthropic = "0.40.0"
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.0"
pypandoc_binary = "^1.14.0"
python-dotenv = "^1.0.0"
rapidfuzz = "^3.9.7"
pdf2image = "^1.16.3"
openai-agents = "0.0.9"
ultralytics = "^8.4.27"
Wand = "0.6.13"
datamodel-code-generator = "^0.31.2"
langfuse = "^3.0.0"
tiktoken = "^0.12.0"
google-genai = "^1.68.0"
pydantic = "^2.12.5"
requests = "^2.33.0"
tenacity = "^9.1.4"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-html = "^4.1.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
tabulate = "^0.9.0"
deepeval = "^3.9.2"
plotly = "^5.24.1"
pytest-harvest = "^1.10.5"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
papermill = "^2.6.0"
pandas = "^2.3.2"
rouge-score = "^0.1.2"
huggingface-hub = "^1.8.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true